Adding notes about private interface members.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -869,25 +869,29 @@
     "\n",
     "Once you have private members on a class, you cannot use it as a pure interface. You must extend it instead.\n",
     "\n",
-    "Interfaces cannot have private things.\n"
+    "Interfaces cannot have private things.\n",
+    "\n",
+    "NOTE: this appears to have been changed in a __later version__ of TS.  Now, private members seem to be part of the interface and are required to be implemented (as private).  It doesn't make sense, but it happens.\n",
+    "\n",
+    "__Static__ members are still ignored in interfaces for the purpose of implementing though."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "65da2494",
    "metadata": {},
    "outputs": [
     {
      "ename": "Error",
-     "evalue": "Line 8, Character 9\n  class Employee implements Person {\n________^\nTS2720: Class 'Employee' incorrectly implements class 'Person'. Did you mean to extend 'Person' and inherit its members as a subclass?\n  Property 'age' is missing in type 'Employee' but required in type 'Person'.",
+     "evalue": "Line 8, Character 9\n  class Employee implements Person {\n________^\nTS2720: Class 'Employee' incorrectly implements class 'Person'. Did you mean to extend 'Person' and inherit its members as a subclass?\n  Types have separate declarations of a private property 'age'.",
      "output_type": "error",
      "traceback": [
       "Error: Line 8, Character 9",
       "  class Employee implements Person {",
       "________^",
       "TS2720: Class 'Employee' incorrectly implements class 'Person'. Did you mean to extend 'Person' and inherit its members as a subclass?",
-      "  Property 'age' is missing in type 'Employee' but required in type 'Person'.",
+      "  Types have separate declarations of a private property 'age'.",
       "    at execTranspile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
       "    at Session.transpiler [as transpile] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
       "    at Session._runNow (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
@@ -912,7 +916,7 @@
     "  class Employee implements Person {\n",
     "    name: string;\n",
     "    // It doesn't matter if you include this or not.\n",
-    "    //private age: number;\n",
+    "    private age: number;\n",
     "  }\n",
     "})();\n"
    ]
