Adding info about import maps and some tsconfig fields.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -2342,9 +2342,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba14e114",
+   "metadata": {},
+   "source": [
+    "# Import Maps\n",
+    "\n",
+    "Imports maps are a browser feature that lets you map library names to URLs (for use in _import_ and _import()_). They work for both static and dynamic imports. \n",
+    "\n",
+    "For instance, instead of the bundler turning `import { of } from 'rxjs'` into some CDN path, the bundler can add the CDN path (or your own bundle of rxjs) to the import map with `rxjs` as the key, and then leave this import statement alone. Future imports (eg. from other libraries) of 'rxjs' will use yours (if they are configured to do so instead of hardcoding the path).\n",
+    "\n",
+    "Import maps are built in a `<script type=\"importmap\">` element (containing JSON) in the DOM. They are created when the import system is initialized (when the first import happens). You can still use `fetch()` to load JSON files containing entries before the first import happens if you need to hack more entries into this DOM element.  Once the import system is initialized, you can't add any more.\n",
+    "\n",
+    "A popuplar _polyfill_ for this is __es-module-shims__, which uses specially marked DOM elements (which your bundler must emit around your stuff) to create a parallel module system by reassigning what _import_ does to include reading from the table."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dcbfeb6",
+   "id": "22e27540",
    "metadata": {},
    "outputs": [],
    "source": []
