--- a/typescript/tsconfig.json.ipynb
+++ b/typescript/tsconfig.json.ipynb
@@ -130,13 +130,41 @@
    "source": [
     "## paths\n",
     "\n",
-    "The `paths` property can be used to configure __prefixes__ to use in import paths.  For instance, if you want `@/` to always mean in a certain subpackage or subfolder."
+    "The `paths` property can be used to configure __prefixes/aliases__ to use in import paths.  For instance, if you want `@/` to always mean in a certain subpackage or subfolder.\n",
+    "\n",
+    "Example: `'@shared-ui': ['libs/somefolder/shared-ui/index.ts']`\n",
+    "   - `import * from '@shared-ui';`\n",
+    "   - note the use of the `.ts` extension\n",
+    "   - also note the `@` is not required, but is commonly used\n",
+    "\n",
+    "Example: `'@shared-ui*': ['libs/somefolder/shared-ui/*']`\n",
+    "   - `import * from '@shared-ui/somefile'`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c0082b9",
+   "metadata": {},
+   "source": [
+    "## stylePreprocessorOptions\n",
+    "\n",
+    "This is basically the CSS (or SCSS) equivalent of `paths`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "866f03be",
+   "metadata": {},
+   "source": [
+    "## extends\n",
+    "\n",
+    "You can use the `extends` field to inherit settings from a different `json` file (eg. `tsconfig.base.json`)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2eb787f",
+   "id": "03025aed",
    "metadata": {},
    "outputs": [],
    "source": []
