Adding some more minor notes.

--- a/typescript/Modules and Imports.ipynb
+++ b/typescript/Modules and Imports.ipynb
@@ -736,7 +736,9 @@
    "id": "1dade797",
    "metadata": {},
    "source": [
-    "# Statefulness\n"
+    "# Statefulness\n",
+    "\n",
+    "NOTE: A module is considered the same module if it has the same fully resolved URL. Two modules with the same name in different places will not share data."
    ]
   },
   {
