--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42c87ce0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "93c9ee45",
    "metadata": {},
@@ -241,6 +249,42 @@
     "    processUnknownValue,\n",
     "  };\n",
     "})();\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff8b04df",
+   "metadata": {},
+   "source": [
+    "# as unkown as\n",
+    "\n",
+    "More recent versions of TypeScript have been banning the direct use of `any` to get around compiler checks. When you still need to do it, such as when dealing with pure JS objects, you can use this pattern to make the cast happen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "56e0c221",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  const w = {};\n",
+    "  (w as any).x = 100; // this is often not allowed now\n",
+    "  (w as {x: number}).x = 100; // this is also often not allowed now\n",
+    "  (w as unknown as {x: number}).x = 100;  // this is more current\n",
+    "})();"
    ]
   },
   {
@@ -1828,7 +1872,9 @@
    "source": [
     "# 'any' as a JS bypass\n",
     "\n",
-    "TS will not prevent any property reads or writes on an `any` type object, so it's a way to get JS behavior in TS when needed (such as when examining how JS concepts work, within one of these notebooks)."
+    "TS will not prevent any property reads or writes on an `any` type object, so it's a way to get JS behavior in TS when needed (such as when examining how JS concepts work, within one of these notebooks).\n",
+    "\n",
+    "NOTE: later versions of TypeScript are disallowing this (esp. when configured more strictly by Angular)."
    ]
   },
   {
