Updating study notes.

--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -232,6 +232,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d79c8ac",
+   "metadata": {},
+   "source": [
+    "# Array Concatenation\n",
+    "\n",
+    "`a.push(1, 2, 3)` is variadic, so you can add items in sequence.\n",
+    "\n",
+    "`a.push(...otherA)` is therefore a way to concat another array to the end.\n",
+    "\n",
+    "`a.concat(otherA)` is another way.\n",
+    "\n",
+    "Note that `+` does not concat arrays because it does string conversion instead."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "41a7d607",
    "metadata": {},
    "source": [
@@ -849,6 +865,8 @@
     "Adding an item to an index position in an array that doesn't exist automatically adds `undefined` entries in between to make it work.\n",
     "\n",
     "You can also do this `const a = [1, 2, , , , 5];` to achieve a similar effect.\n",
+    "\n",
+    "Another way to do it is: `a.length += 2`, which will add 2 sparse `undefined` entries to the end. Similarly, you cna subtract from the length to cut off, or directly set it to a number.\n",
     "\n",
     "NOTE: JS stores arrays like this __sparsely__."
    ]
