--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -548,6 +548,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "abfe4ca8",
+   "metadata": {},
+   "source": [
+    "# Awaiting Promise Multiple Times\n",
+    "\n",
+    "`await p; await p;` - the second await will get the value that was _already resolved_ by p, rather than restarting.\n",
+    "\n",
+    "From the perspective of the promise, it's like two different callers called `p.then()` on the same promise in parallel (even though it's technically in series here).\n",
+    "\n",
+    "The same logic applies to errors and throwing.\n",
+    "\n",
+    "__Use Case__: keep a list of promises representing different views in a web page, and resolve each one as the user tries to enter it. The first time, it will be forced to wait if not done loading yet, but after that, it will come back quickly and keep using the same data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c24e69f",
    "metadata": {},
    "source": [
@@ -1322,6 +1338,8 @@
     "    replace(url: string) to navigate to another page without adding a back button entry\n",
     "    assign(url: string) to navigate to another page with a back button entry\n",
     "      you can also change location.href and do location.reload()\n",
+    "    pathName = URL without origin or query params [just path relative to origin]\n",
+    "      file not included in pathName if not included in address bar\n",
     "```\n",
     "    if you change 'href', it will navigate to the new page after the current code finishes\n",
     "      you can do reload() to do it right away - then no more of your code will execute\n",
