Adding some more JS notes (sessionStorage, symbol, delete).

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1582,7 +1582,9 @@
     "  - a symbol can be used as a unique key in a map or object by putting it in `[]`\n",
     "  - a symbol key will be ignored when you iterate an object with `Objects.keys()`\n",
     "    - but it will not be ignored in maps\n",
-    "    - this is a way to \"hide\" a property on an object in a way"
+    "    - this is a way to \"hide\" a property on an object in a way\n",
+    "  - a symbol could also be passed in as a param to function like an enum with compact syntax\n",
+    "    - `fetch(CLEAR_CACHE)` vs. `fetch()` or `fetch(USE_CACHE)`"
    ]
   },
   {
@@ -1610,7 +1612,15 @@
     "localStorage.clear();\n",
     "```\n",
     "\n",
-    "There is a 5 MB limit for the origin, and future attempts to add data will throw exceptions if exceeded."
+    "There is a 5 MB limit for the origin, and future attempts to add data will throw exceptions if exceeded.\n",
+    "\n",
+    "# sessionStorage\n",
+    "\n",
+    "`sessionStorage` has the same interface as `localStorage`, but the persistence is different. It lives for a given app for the duration of a __browser tab__. It will survive refreshes, navigating away and back to the page, etc. as long as you don't close the browser tab. Other tabs will have separate session storage.\n",
+    "\n",
+    "__NOTE__: the name has nothing to do with HTTP sessions\n",
+    "\n",
+    "__HINT__: a way to save text that was entered so you can restore it if the user navigates away"
    ]
   },
   {
