--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -2551,12 +2551,16 @@
    "source": [
     "# 'delete' Operator\n",
     "\n",
-    "This is like Python's `del` operator, but it __only works on object properties__."
+    "This is like Python's `del` operator, but it __only works on object properties__.  It can be used with computed properties too.\n",
+    "\n",
+    "It _kind of_ works on arrays, but it leaves the entry still there and __sparse__.  It does nothing on maps.\n",
+    "\n",
+    "Calling it on a __non-existent__ property or index is just a _noop_ (does not throw)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "a06b5a6c",
    "metadata": {},
    "outputs": [
@@ -2568,7 +2572,12 @@
       "400\n",
       "\n",
       "{ y: 200 } 200\n",
-      "undefined\n"
+      "undefined\n",
+      "y deleted: {}\n",
+      "z deleted: {}\n",
+      "[ 1, <1 empty item>, 3 ]\n",
+      "[ 1, <2 empty items> ]\n",
+      "[ 1, <2 empty items> ]\n"
      ]
     },
     {
@@ -2577,7 +2586,7 @@
        "undefined"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2595,6 +2604,18 @@
     "    delete m.x;\n",
     "    console.log(m, m.y);\n",
     "    console.log(m.x); // undefined now (not present)\n",
+    "    delete m['y'];\n",
+    "    console.log('y deleted:', m);\n",
+    "    delete m['z'];\n",
+    "    console.log('z deleted:', m);\n",
+    "    \n",
+    "    const arr = [1, 2, 3];\n",
+    "    delete arr[1];\n",
+    "    console.log(arr);\n",
+    "    delete arr[2];\n",
+    "    console.log(arr);\n",
+    "    delete arr[3]; // no op\n",
+    "    console.log(arr);\n",
     "})();"
    ]
   },
