Adding more TypeScript notes (public, typeof, ReturnType).

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -9,6 +9,7 @@
     "\n",
     "- Notice that you need `this` to access members from other members.\n",
     "- Members are **public by default** to match JavaScript where everything is public.\n",
+    "  - but you can still __specify public__ to be explicit if you want\n",
     "- Note that methods are like functions by **no function keyword**.\n",
     "- For the most part, you have to declare variables in the body (unlike Python).\n",
     "  - the one exception is in **parameter properties** where you can declare fields in a constructor by using an access keyword like _public_.\n",
