--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -2371,6 +2371,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "57b5a2bc",
+   "metadata": {},
+   "source": [
+    "## ReturnType\\<FunctionType\\>\n",
+    "\n",
+    "`ReturnType<FunctionType>` is a __utility type__ provided by the TS compiler (available globally without import).\n",
+    "\n",
+    "It gets the type returned by a function.\n",
+    "\n",
+    "`type R = ReturnType<typeof myfunction>;`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ba14e114",
    "metadata": {},
    "source": [
