--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -2721,9 +2721,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0f1e9ae9",
+   "metadata": {},
+   "source": [
+    "# TypeScript Enhancement to 'typeof'\n",
+    "\n",
+    "In addition to the use of `typeof` in JS to get a string representing a type, the TS compiler also uses `typeof` for typing.\n",
+    "\n",
+    "Note that this is restricted to functions, variables, and their properties.  You cannot make a call to get a type because that would confuse people about what code will actually run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b4eaf2dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number\n",
+      "number\n",
+      "number\n",
+      "number\n",
+      "string\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    let x = 100;\n",
+    "    type X = typeof x; // type context\n",
+    "    let y: X;\n",
+    "    // y = 's'; // ILLEGAL\n",
+    "    y = 200;\n",
+    "    console.log(typeof y); // number\n",
+    "    \n",
+    "    // special case of type inferred const variable\n",
+    "    const z = 100;\n",
+    "    type Z = typeof z;\n",
+    "    let zz: Z;\n",
+    "    // zz = 200; // ILLEGAL\n",
+    "    zz = 100;\n",
+    "    console.log(typeof zz); // number\n",
+    "    \n",
+    "    // making const variable act normal\n",
+    "    const a: number = 100;\n",
+    "    type A = typeof a;\n",
+    "    let aa: A;\n",
+    "    aa = 200;    // FINE NOW\n",
+    "    console.log(typeof aa); // number\n",
+    "    \n",
+    "    // property\n",
+    "    const o = {a: 100, b: 200};\n",
+    "    type O = typeof o.a;\n",
+    "    let oo: O = 200; // OK because we didn't mark a as a constant\n",
+    "    console.log(typeof oo); // number\n",
+    "    \n",
+    "    // function\n",
+    "    function f(x: number): string {\n",
+    "        return String(x);\n",
+    "    }\n",
+    "    type F = typeof f;\n",
+    "    let g: F;\n",
+    "    g = a => String(a);\n",
+    "    // g = a => Number(a); // ILLEGAL\n",
+    "    \n",
+    "    // use with ReturnType\n",
+    "    type R = ReturnType<F>;\n",
+    "    let s: R = 'hi';\n",
+    "    console.log(typeof s); // string\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b68c0d5",
+   "id": "4897ceee",
    "metadata": {},
    "outputs": [],
    "source": []
