Adding notes about 'pyenv rehash'.

--- a/python/Conda and Pip.ipynb
+++ b/python/Conda and Pip.ipynb
@@ -1772,6 +1772,10 @@
     "      - __overrides local and global__ if set\n",
     "  - `pyenv shell 3.8`\n",
     "    - sets __current shell session__ version as described above\n",
+    "  - `pyenf rehash`\n",
+    "    - sometimes helps if python is hanging when you run a python command\n",
+    "      - actually the pyenv shim hanging a while before finally loading\n",
+    "    - the docs say you're supposed to run it after installing anything executable\n",
     "    \n",
     "`pip` and `python` become redirected to the appropriate `pip3` and `python3`, so you can __drop the 3__ if using `pyenv`.  It will work with and without the 3."
    ]
