Adding info about poetry.

--- a/python/Conda and Pip.ipynb
+++ b/python/Conda and Pip.ipynb
@@ -1781,9 +1781,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "83438e0c",
+   "metadata": {},
+   "source": [
+    "# Poetry\n",
+    "\n",
+    "## Summary\n",
+    "`poetry` is like `venv` and `virtualenv` but with additional features.  Overall, it has these main features:\n",
+    "1. virtual environment for _pip packages_ (not for Python itself - use `pyenv` or similar at the same time for that)\n",
+    "1. more advanced _dependency management_\n",
+    "1. npm-like features\n",
+    "1. possible integration with other virtual environment solutions if desired\n",
+    "   - thus you need to be careful not to have any environments active when you invoke it\n",
+    "\n",
+    "## Subshells\n",
+    "Compared to other virtual environment solutions, `poetry` is unique in that it __spawns a subshell__ (non-interactive and non-login) to switch environments - which presents unique challenges for scripts:\n",
+    "1. any script code after spawning with `poetry shell` will not be run until the environment is exited\n",
+    "1. any script code after exiting an environment will not be run\n",
+    "\n",
+    "## Projects\n",
+    "A project is a folder containing _pyproject.toml_. This is equivalent to _package.json_ from the `npm` world.\n",
+    "\n",
+    "It also has a _poetry.lock_ file which is equivalent to _package-lock.json_.\n",
+    "\n",
+    "## Commands\n",
+    "  - `poetry install`\n",
+    "    - equivalent to `npm install`\n",
+    "    - installs all the packages and dependencies in _pyproject.toml_ in the virtual environment and updates _poetry.lock_\n",
+    "    - it also __creates a virtual environment__ for the project if one doesn't exist\n",
+    "    - the environment lives in a __global cache__ and is __not yet active__ after this command\n",
+    "  - `poetry add packagename`\n",
+    "    - adds a package to `pyproject.toml` and installs it in the virtual environment\n",
+    "    - just doing `pip install` is usually bad because then `pyproject.toml` won't be updated\n",
+    "  - `poetry shell`\n",
+    "    - starts a new subshell instance within current shell\n",
+    "    - activates current project's environment\n",
+    "    - inherits exported variables but not aliases (because non-interactive, non-login)\n",
+    "    - does not run profile scripts\n",
+    "    - if you want it to run your profile scripts so you can get aliases, etc., you need to run it as interactive/login\n",
+    "      - put `SHELL` variable at beginning of command and set it to a single executable thing\n",
+    "        - arguments are not accepted\n",
+    "      - make the executable thing a wrapper __shell script__ which calls `/bin/zsh -l -i` or similar\n",
+    "   - `exit`\n",
+    "      - the ordinary __shell exit__ command terminates the subshell, returning you to the parent, and exiting the environment\n",
+    "      - if you are not in an environment when you run this, it will exit your actual shell!\n",
+    "      - use `poetry env info` to get the environment's path and check `$VIRTUAL_ENV` to see if active first\n",
+    "   - `poetry env info`\n",
+    "     - get info about the current environment\n",
+    "       - even if not active\n",
+    "     - check `$VIRTUAL_ENV` to see if it's active"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f569e678",
+   "id": "ec0ff82d",
    "metadata": {},
    "outputs": [],
    "source": []
