Adding more JS info.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -1155,6 +1155,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "87a5cc94",
+   "metadata": {},
+   "source": [
+    "# Structural Typing Literal Restriction\n",
+    "\n",
+    "If you specify the type and the literal inline, you are not allowed to add any extra properties.  But if you add any indirection to it, such as another variable, the `as` operator, a function call, etc. then structural typing works OK."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "eca32cd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass {\n",
+    "        x: number;\n",
+    "    }\n",
+    "    \n",
+    "    // const m: MyClass = {x: 100, y: 200}; // ILLEGAL\n",
+    "    \n",
+    "    // both legal\n",
+    "    const m = {x: 100, y:200} as MyClass;\n",
+    "    const n: MyClass = m;\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36e74335",
    "metadata": {},
    "source": [
