--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -874,6 +874,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4476858c",
+   "metadata": {},
+   "source": [
+    "# Introduce Delay in Promise Chain\n",
+    "\n",
+    "Make use of the way promises are defined and the way they flatten.\n",
+    "\n",
+    "```JS\n",
+    "const delay = ms => new Promise(resolve => setTimeout(resolve, ms));\n",
+    "p.then(val => delay(5000).then(() => val)) etc. etc.\n",
+    "```\n",
+    "\n",
+    "This is useful for testing how your UI behaves when the backend is slow to return data, for instance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6e37214b",
    "metadata": {},
    "source": [
@@ -1352,6 +1369,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4d48f0e",
+   "metadata": {},
+   "source": [
+    "# Querying \\<script> and \\<style>\n",
+    "\n",
+    "You can query and append `<script>` and `<style>` tags (by ID, type, etc.) and get their content with `.textcontent` just like other nodes.\n",
+    "\n",
+    "For instance, Babel can be used to compile JSX from `<script>` tags that specify a babel type, and then execute the code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "81cfd766",
    "metadata": {},
    "source": [
@@ -1666,6 +1695,16 @@
     "document.cookie = \"username=John Doe; secure; path=/\";\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "074ee887",
+   "metadata": {},
+   "source": [
+    "# Storage Between Browsers\n",
+    "\n",
+    "APIs like `localStorage`, cookies, etc. are per-browser application.  For instance, Firefox and Chrome will not share storage or cookies. However, they will be shared between window of the same appliation, if applicable."
    ]
   },
   {
@@ -2400,9 +2439,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9cb38e4",
+   "metadata": {},
+   "source": [
+    "# BroadcastChannel\n",
+    "\n",
+    "`BroadcastChannel` is basically a __named pipe__ that is scoped to an origin and a browser application. It can be used to send data between __different windows and tabs (and iframes)__ of the same browser application at the __same origin__. It can also be used within the same tab and even in the same code to communicate, but the overhead is high, so that use case is not very good.\n",
+    "\n",
+    "It is async in terms of message loop (posted message arrives in future tick) but not in the Promise sense. Even so, it makes requesting a value right away not work, which means you have to change your coding style.\n",
+    "\n",
+    "- `const channel = new BroadcastChannel(‘my-channel’);`\n",
+    "    - creates or subscribes to channel of given name\n",
+    "    - used for both sending and receiving\n",
+    "- `channel.postMessage(message)`\n",
+    "    - sends object (serialized using structuredClone algorithm) to anyone (any instance) listening on this channel name\n",
+    "    - since it’s serialized, you will lose identity equality on the resulting object across boundaries\n",
+    "- `channel.close()`\n",
+    "    - stop listening and allow garbage collection\n",
+    "- `channel.addEventListener(‘message’, e => {…`\n",
+    "    - subscribe to messages on that channel name\n",
+    "    - will not see messages posted by same BroadcastChannel instance, but will see messages from same context (tab, iframe, window, etc.) if different local BroadcastChannel instances\n",
+    "        - thus, both instances can post to each other for 2-way communication\n",
+    "- `e.data` will have the object (after serializing and deserializing)\n",
+    "- `BroadcastChannel` inherits from `EventTarget`, so you can do the usual event stuff\n",
+    "- `channel.addEventListener(‘messageerror’, e => {…`\n",
+    "    - triggerd on deserialization error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd137807",
+   "metadata": {},
+   "source": [
+    "# MessageChannel\n",
+    "\n",
+    "`MessageChannel` is similar to `BroadcastChannel` except more generic/manual. Instead of a named pipe, the created `MessageChannel` has 2 variables: `port1` and `port2`.\n",
+    "\n",
+    "A message posted to one will trigger `message` event on the other (but not to themselves). There are ways built into the browser API to “transfer” port2 to other contexts (workers, iframes, etc.). Thus, it can be used similar to `BroadcastChannel` but with a specific port instead of a named pipe. It does not work for different windows and tabs because those aren’t sharing a DOM (unlike `BroadcastChannel`)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22e27540",
+   "id": "258aa7a9",
    "metadata": {},
    "outputs": [],
    "source": []
