Adding new python notes.

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -3153,9 +3153,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18bf2062",
+   "metadata": {},
+   "source": [
+    "# Bytes and Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6a297681",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "b'hello'\n",
+      "<class 'bytes'>\n",
+      "\n",
+      "b'hello'\n",
+      "b'hello'\n",
+      "\n",
+      "hello\n",
+      "hello\n",
+      "\n",
+      "b'abc\\x01\\x02\\x03\\x04\\x05'\n",
+      "b'\\x01\\x02\\x03\\x04\\x05'\n",
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello') # character string\n",
+    "print(b'hello') # byte string (all positions are 0-255)\n",
+    "print(type(b'hello')) # bytes instead of str\n",
+    "print()\n",
+    "\n",
+    "print('hello'.encode('utf-8')) # str to bytes via a mapping\n",
+    "print('hello'.encode()) # system default mapping (usually utf-8)\n",
+    "print()\n",
+    "\n",
+    "print(b'hello'.decode('utf-8')) # bytes to str via a mapping\n",
+    "print(b'hello'.decode()) # system default mapping (usually utf-8)\n",
+    "print()\n",
+    "\n",
+    "print(b'abc\\x01\\x02\\x03\\x04\\x05') # abc followed by the numbers specified in hex for each byte\n",
+    "print(bytes([1, 2, 3, 4, 5])) # list of numbers into bytes\n",
+    "print(list(b'\\x01\\x02')) # bytes to list of numbers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1af6f23",
+   "id": "e4ffff06",
    "metadata": {},
    "outputs": [],
    "source": []
