--- a/python/Built-In Libraries.ipynb
+++ b/python/Built-In Libraries.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "id": "4278182a",
    "metadata": {},
    "outputs": [
@@ -373,9 +373,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/davidpetrofsky/miniforge3/envs/ai/bin:/Users/davidpetrofsky/miniforge3/condabin:/usr/local/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/System/Cryptexes/App/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Library/TeX/texbin\n",
+      "/Users/davidpetrofsky/miniforge3/envs/ai/bin:/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/bin:/Users/davidpetrofsky/miniforge3/condabin:/Users/davidpetrofsky/OpenJDK/jdk-21.0.1.jdk/Contents/Home/bin:/usr/local/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/System/Cryptexes/App/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin:/Library/TeX/texbin\n",
       "\n",
-      "0\n"
+      "0\n",
+      "hello\n",
+      "True\n",
+      "end\n"
      ]
     }
    ],
@@ -392,7 +395,15 @@
     "\n",
     "# Setting environment variable\n",
     "os.environ['NEWTHING'] = 'hello'\n",
-    "os.putenv('NEWTHING2', 'hello2')"
+    "os.putenv('NEWTHING2', 'hello2') # this doesn't update os.environ itself - only the shell\n",
+    "print(os.environ['NEWTHING'])\n",
+    "# print(os.environ['NEWTHING2']) # KeyError\n",
+    "\n",
+    "# Testing environment variable\n",
+    "print('NEWTHING' in os.environ)\n",
+    "\n",
+    "# Set and get or just get\n",
+    "print(os.environ.setdefault('NEWTHING3', 'end'))"
    ]
   },
   {
@@ -2001,9 +2012,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db8f4389",
+   "metadata": {},
+   "source": [
+    "# hashlib\n",
+    "\n",
+    "When you call `hash()`, you are getting a hash for use in dictionaries, etc, but if you want a __cryptographic hash__, use `hashlib`.\n",
+    "\n",
+    "Note that you have to __pass a byte stream__ instead of string, so either use a `b''` literal or call `.encode()` as shown below.\n",
+    "\n",
+    "The result is an object.  You must call `.hexdigest()` to get a hex string back."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "38acdfb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<sha256 _hashlib.HASH object @ 0x111123d90>\n",
+      "8f434346648f6b96df89dda901c5176b10a6d83961dd3c1ac88b59b2dc327aa4\n",
+      "8f434346648f6b96df89dda901c5176b10a6d83961dd3c1ac88b59b2dc327aa4\n",
+      "0f7b65896794e598bca07e5436d42e6278b7f24d6154a7d338804f21269b7c65\n"
+     ]
+    }
+   ],
+   "source": [
+    "import hashlib\n",
+    "\n",
+    "h = hashlib.sha256('hi'.encode('utf-8'))\n",
+    "print(h)\n",
+    "print(h.hexdigest())\n",
+    "\n",
+    "print(hashlib.sha256(b'hi').hexdigest())\n",
+    "\n",
+    "print(hashlib.sha256(b'salt' + b'hi').hexdigest())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29153186",
+   "id": "b888db2e",
    "metadata": {},
    "outputs": [],
    "source": []
