--- a/python/Modules and Packages.ipynb
+++ b/python/Modules and Packages.ipynb
@@ -563,7 +563,8 @@
     "Another couple of things I didn't show here but you should remember:\n",
     "\n",
     "- there is also .. for relative imports\n",
-    "- there is also \\* for importing all symbols in a module\n"
+    "- there is also `import *` for importing all symbols in a module\n",
+    "  - you can restrict which symbols get included in `import *` by providing an `__all__` list in the file that's imported"
    ]
   },
   {
@@ -734,9 +735,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ad8b636",
+   "metadata": {},
+   "source": [
+    "# Inline Imports (Lazy Loading)\n",
+    "\n",
+    "The `import` statement can be used inside functions, etc. instead of at the top-level.  It does not return a value, and it is synchronous. This is a way to lazy-load modules when you need them.  Your linter may complain - some examples online use the comment `#noqa` after the import statement on the same line to disable the complaint.\n",
+    "\n",
+    "If you want to import as a variable instead of into the top namespace, similar to JavaScript's dynamic imports, but synchronous, use `importlib.import_module`. It also takes a string instead of a naked module path."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d00c68d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "module loaded\n",
+      "x = 10\n",
+      "mymodule\n",
+      "file: /Users/davidpetrofsky/repos/snippets/python/mymodule.py\n",
+      "argv0: /Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/ipykernel_launcher.py\n",
+      "f result: <module 'mymodule' from '/Users/davidpetrofsky/repos/snippets/python/mymodule.py'>\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "def f():\n",
+    "    import mymodule\n",
+    "    return mymodule\n",
+    "print('mymodule' in sys.modules)\n",
+    "print('f result:', f())\n",
+    "print('mymodule' in sys.modules)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1b585f26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "module loaded\n",
+      "x = 10\n",
+      "mymodule\n",
+      "file: /Users/davidpetrofsky/repos/snippets/python/mymodule.py\n",
+      "argv0: /Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/ipykernel_launcher.py\n",
+      "f result: <module 'mymodule' from '/Users/davidpetrofsky/repos/snippets/python/mymodule.py'>\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import importlib\n",
+    "\n",
+    "def f():\n",
+    "    return importlib.import_module('mymodule')\n",
+    "    \n",
+    "print('mymodule' in sys.modules)\n",
+    "print('f result:', f())\n",
+    "print('mymodule' in sys.modules)\n",
+    "\n",
+    "# print(mymodule) # ILLEGAL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27aac8e5",
+   "id": "fb0e43f8",
    "metadata": {},
    "outputs": [],
    "source": []
