Adding a couple of items about 'requests' library.

--- a/python/3rd Party Libraries.ipynb
+++ b/python/3rd Party Libraries.ipynb
@@ -152,6 +152,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "537aae6c",
+   "metadata": {},
+   "source": [
+    "### Other HTTP Methods\n",
+    "\n",
+    "HEAD, OPTIONS, and PATCH are explicitly supported.\n",
+    "\n",
+    "Custom method names are supported via calling `requests.request()` which takes the method as a __string arg__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "639cf6ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function head at 0x104498e50>\n",
+      "<function options at 0x104498dc0>\n",
+      "<function patch at 0x104499000>\n",
+      "Status: 200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "print(requests.head)\n",
+    "print(requests.options)\n",
+    "print(requests.patch)\n",
+    "\n",
+    "response = requests.request('GET', 'https://jsonplaceholder.typicode.com/todos/1')\n",
+    "print('Status:', response.status_code) # 200\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6466e028",
    "metadata": {},
    "source": [
@@ -310,9 +352,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8eb218eb",
+   "metadata": {},
+   "source": [
+    "### Non-Dictionary Bodies\n",
+    "\n",
+    "`response.json()` will automatically return the __correct type__ of thing (eg. a `list`)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37d28c00",
+   "id": "4b6a5a79",
    "metadata": {},
    "outputs": [],
    "source": []
